--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hello Glimmer</title>
-    <meta name="description" content="">
+    <title>tmpy - Sharing temporary files</title>
+    <meta name="description" content="Your friendly file sharing app">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
