--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -17,8 +17,8 @@
     {{content-for "body"}}
 
     <div id="app"></div>
-    <script src="https://cdn.jsdelivr.net/clipboard.js/1.6.0/clipboard.min.js" async></script>
-    <script src="{{rootURL}}app.js"></script>
+    <script src="https://cdn.jsdelivr.net/clipboard.js/1.6.0/clipboard.min.js" defer></script>
+    <script src="{{rootURL}}app.js" defer></script>
 
     {{content-for "body-footer"}}
   </body>
